--- a/styling.css
+++ b/styling.css
@@ -36,6 +36,11 @@ h1{
     border: 3px solid black;
     background-color: white;
 
+    
+    background-size: 50px;
+    background-repeat: no-repeat;
+    background-position: center; 
+
 
 }
 
