--- a/styling.css
+++ b/styling.css
@@ -48,3 +48,11 @@ h1{
     background-color: beige;
 }
 
+.bombs
+{
+   display: none;
+   height: 20px;
+   width : 20px;
+   background-image: url("bomb.svg");
+
+}
