--- a/styling.css
+++ b/styling.css
@@ -3,6 +3,12 @@
     margin : 0;
 }
 
+body{
+
+    background-color: rgb(4, 4, 86);
+
+}
+
 .prematter{
 
     margin : 100px;
@@ -24,27 +30,40 @@
 
 }
 
-.midmatter img{
+.midmatter .showplayer{
     height: 50px;
     width: 50px;
 }
 
 .midmatter input{
 
-    height: 30px;
+    height: 35px;
     width: 300px;
-    border: 3px solid grey;
-    border-radius: 20px;
+    border: 2px solid rgb(245, 223, 83);
+    border-radius: 5px;
     padding-left: 10px ;
+    background-color: transparent;
+    color: white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+
+.midmatter input:focus{
+    background-color: transparent;
+}
+
+
 
 .midmatter button{
 
-    height: 40px;
-    width: 100px;
-    border: 3px solid black;
-    border-radius: 10px;
+    height: 50px;
+    width: 130px;
+    border: 3px solid rgb(245, 223, 83);
+    border-radius: 3px;
     margin-top: 30px;
+    background-color: transparent;
+    color: white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
 }
 
 .midmatter div{
@@ -52,13 +71,23 @@
     display : none;
 }
 
+.chooseplayers{
+
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 20px;
+    color: beige;
+
+}
+
 .choosebutton{
 
     height: 60px;
     width: 100px;
-    border: 2px solid gray;
-    background-color: black;
+    border: 2px solid rgb(245, 223, 83);
+    background-color: transparent;
     color: white;
+    font-size: 15px;
+    font-family: sans-serif;
 
 }
 
@@ -80,7 +109,8 @@ h1{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-    border: 5px solid black;
+    border: 3px solid rgb(245, 223, 83);
+    border-radius: 10px;
     width: 349px;
     height: 349px;
     margin-top: 100px;
@@ -92,9 +122,9 @@ h1{
 
     height : 70px;
     width: 70px;
-    border: 3px solid black;
-    background-color: white;
-
+    border: 3px solid rgb(245, 223, 83);
+    background-color: transparent;
+    border-radius: 10px;
     
     background-size: 50px;
     background-repeat: no-repeat;
@@ -103,8 +133,10 @@ h1{
 
 }
 
+
+
 .fieldbox:hover{
-    background-color: beige;
+    background-color: transparent;
 }
 
 .bombs
@@ -118,7 +150,7 @@ h1{
 
 .choosebutton:hover{
 
-    background-color: goldenrod;
+    background-color: rgb(240, 197, 89);
 
 }
 
@@ -126,6 +158,16 @@ h1{
 
     font-size: 20px;
     font-weight: bold;
+    color: white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.logo{
+
+    height: 100px;
+    width: fit-content;
+    
+
 }
 
 
