--- a/styling.css
+++ b/styling.css
@@ -6,6 +6,7 @@
 body{
 
     background-color: rgb(4, 4, 86);
+    
 
 }
 
@@ -17,6 +18,7 @@ body{
     row-gap: 20px;
     justify-content: center;
     align-items: center;
+    animation: transitionIntoPre 0.75s ;
 }
 
 .midmatter{
@@ -27,6 +29,7 @@ body{
     row-gap: 20px;
     justify-content: center;
     align-items: center;
+    animation: transitionIntoMid 0.75s ;
 
 }
 
@@ -97,6 +100,7 @@ body{
     row-gap: 20px;
     justify-content: center;
     align-items: center;
+    animation: transitionIntoMid 0.75s ;
 }
 
 h1{
@@ -145,6 +149,7 @@ h1{
    height: 20px;
    width : 20px;
    background-image: url("bomb.svg");
+   animation: bombDrop 0.75s ;
 
 }
 
@@ -165,9 +170,56 @@ h1{
 .logo{
 
     height: 100px;
-    width: fit-content;
+    width: fit-content;    
+}
+
+
+@keyframes transitionIntoPre {
+    from{
+        
+        opacity: 0;
+        transform:scale(1.2,1.2);
+    }
+
+    to {
     
+         opacity: 1;
+         transform: scale(1,1);
+    }
 
 }
+
+
+@keyframes transitionIntoMid {
+
+    from{
+        
+        opacity: 0;
+        transform: rotateY(-180deg);
+    }
+
+    to {
+    
+         opacity: 1;
+         transform: rotateY(0deg);
+    }
+
+
+}
+
+@keyframes bombDrop {
+
+    from{
+        opacity : 1;
+        transform: translateY(-70px);
+    }
+
+    to{
+        opacity:1;
+        transform: translateY(0px);
+    }
+}
+
+
 
 
