--- a/styling.css
+++ b/styling.css
@@ -132,10 +132,11 @@ h1{
     
     background-size: 50px;
     background-repeat: no-repeat;
-    background-position: center; 
-
+    background-position: center;
 
 }
+
+
 
 
 
@@ -219,6 +220,32 @@ h1{
         transform: translateY(0px);
     }
 }
+
+@keyframes playerMove {
+
+    from{
+        opacity: 1;
+        background-position: left;
+
+    }
+
+    to{
+        opacity : 1;
+        background-position: center;
+    }
+    
+}
+
+
+/* .movablePlayer{
+
+    height: 70px;
+    width : 70px;
+    background-color: red;
+    border : 3px solid red;
+    border-radius: 10px;
+    background-color: transparent;
+} */
 
 
 
