--- a/styling.css
+++ b/styling.css
@@ -133,6 +133,8 @@ h1{
     background-size: 50px;
     background-repeat: no-repeat;
     background-position: center;
+    
+    animation: zoomIn 0.75s linear;
 
 }
 
@@ -153,6 +155,8 @@ h1{
    animation: bombDrop 0.75s ;
 
 }
+
+
 
 .choosebutton:hover{
 
@@ -221,17 +225,20 @@ h1{
     }
 }
 
-@keyframes playerMove {
+@keyframes zoomIn {
 
     from{
-        opacity: 1;
-        background-position: left;
+      /*   opacity: 1;
+        background-size: 0px 0px; */
+     transform: rotateX(0deg);
+     
 
     }
 
     to{
-        opacity : 1;
-        background-position: center;
+        /* opacity : 1;
+        background-size: 20px 50px; */
+        transform: rotateX(360deg);
     }
     
 }
@@ -239,12 +246,16 @@ h1{
 
 /* .movablePlayer{
 
-    height: 70px;
-    width : 70px;
-    background-color: red;
-    border : 3px solid red;
+    display: flex;
+    height: 60px;
+    width : 60px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    border : none;
     border-radius: 10px;
     background-color: transparent;
+    position: absolute;
 } */
 
 
